--- a/provinceGDP.html
+++ b/provinceGDP.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script type="application/javascript" src="jquery-2.0.2.min.js"></script>
         <script type="application/javascript" src="highcharts.js"></script>
         <script type="application/javascript" src="exporting.js"></script>
