--- a/request.html
+++ b/request.html
@@ -3,13 +3,16 @@
 <script type="application/javascript" src="jquery-2.0.2.min.js"></script>
 </head>
 <body>
-<div id="bj" onclick="get()">Beijing</div>
-<div id="tj">tianjin</div>
+<div id="bj" class="" onclick="getBj()">Beijing</div>
+<div id="tj" onclick="getTj()">tianjin</div>
 </body>
 <script>
-    function get(){
-        //$.get('./provinceGDP.html');
-        window.open("./provinceGDP.html")
+    request = "./provinceGDP.html?";
+    function getBj(){
+        window.open("./provinceGDP.html?bj")
+    }
+    function getTj(){
+        window.open("./provinceGDP.html?tj")
     }
 </script>
 </html>
